--- a/src/app/sass/links.css
+++ b/src/app/sass/links.css
@@ -26,6 +26,7 @@
 @media screen and (max-width: 500px) {
   .links .links-inner {
     grid-template-columns: 1fr;
+    text-align: center;
   }
   .links .links-inner ul {
     margin-bottom: 20px;
