--- a/src/app/sass/carbon.css
+++ b/src/app/sass/carbon.css
@@ -3,7 +3,18 @@
   height: 350px;
   background: url("https://i.ibb.co/72cgtsz/carbon.jpg") no-repeat center center/cover;
 }
-.carbon .content {
+
+.content {
   width: 55%;
   padding: 100px 0 0 30px;
+}
+
+@media screen and (max-width: 700px) {
+  .carbon .content {
+    width: 80%;
+  }
+}
+.btn-flex {
+  display: flex;
+  align-items: center;
 }
