--- a/src/app/sass/carbon.scss
+++ b/src/app/sass/carbon.scss
@@ -1,16 +1,37 @@
+// .carbon {
+//   width: 100%;
+//   height: 350px;
+//   background: url('https://i.ibb.co/72cgtsz/carbon.jpg') no-repeat center center/cover;
+// }
+// .content {
+//   width: 55%;
+//   padding: 100px 0 0 30px;
+// }
+
+// @media screen and(max-width: 700px) {
+//   .content {
+//     width: 85%;
+//   }
+// }
+
 .carbon {
   width: 100%;
   height: 350px;
   background: url('https://i.ibb.co/72cgtsz/carbon.jpg') no-repeat center center/cover;
+}
 
-  & .content {
-    width: 55%;
-    padding: 100px 0 0 30px;
+.content {
+  width: 55%;
+  padding: 100px 0 0 30px;
+}
+
+@media screen and (max-width: 700px) {
+  .carbon .content {
+    width: 80%;
   }
 }
 
-@media screen and(max-width: 700px) {
-  .carbon .content {
-    width: 85%;
-  }
+.btn-flex{
+  display: flex;
+  align-items: center;
 }
