--- a/src/app/sass/footer.css
+++ b/src/app/sass/footer.css
@@ -1,30 +1,16 @@
 .footer {
-  background: #f2f2f2;
-  color: #616161;
-  font-size: 12px;
-  padding: 20px 0;
-}
-.footer-inner {
-  max-width: 1100px;
-  margin: 0 auto;
-  padding: 0 20px 0 20px;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  flex-direction: column;
+  gap: 24px;
+  padding: 36px 0;
 }
-.footer div {
-  margin-bottom: 20px;
+.footer-top {
   display: flex;
-  align-items: center;
+  justify-content: center;
 }
-.footer div i {
-  margin-right: 10px;
-}
-.footer ul {
+.footer-bottom {
   display: flex;
+  justify-content: center;
+  gap: 12px 42px;
   flex-wrap: wrap;
-}
-.footer li {
-  margin-right: 30px;
-  margin-bottom: 20px;
 }
