--- a/src/app/sass/footer.scss
+++ b/src/app/sass/footer.scss
@@ -1,35 +1,18 @@
 .footer {
-  background: #f2f2f2;
-  color: #616161;
-  font-size: 12px;
-  padding: 20px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  padding: 36px 0;
 
-  &-inner {
-    max-width: 1100px;
-    margin: 0 auto;
-    padding: 0 20px 0 20px;
+  &-top {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    justify-content: center;
   }
 
-  & div {
-    margin-bottom: 20px;
+  &-bottom {
     display: flex;
-    align-items: center;
-  }
-
-  & div i {
-    margin-right: 10px;
-  }
-
-  & ul {
-    display: flex;
+    justify-content: center;
+    gap: 12px 42px;
     flex-wrap: wrap;
-  }
-
-  & li {
-    margin-right: 30px;
-    margin-bottom: 20px;
   }
 }
