--- a/src/app/sass/links.css
+++ b/src/app/sass/links.css
@@ -23,6 +23,12 @@
     grid-template-columns: repeat(2, 1fr);
   }
 }
+@media screen and (max-width: 992px) {
+  .links .links-inner {
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 0px;
+  }
+}
 @media screen and (max-width: 500px) {
   .links .links-inner {
     grid-template-columns: 1fr;
