--- a/src/app/sass/navbar.css
+++ b/src/app/sass/navbar.css
@@ -81,15 +81,52 @@
     transform: translateX(-500px);
     transition: transform 0.5s ease-in-out;
   }
-  .main-nav ul.main-menu li {
+  .close {
     padding: 10px;
     border-bottom: #ccc solid 1px;
     font-size: 14px;
+    margin-bottom: 16px;
   }
-  .main-nav ul.main-menu li:last-child {
+  .close:last-child {
     border-bottom: 0;
   }
-  .main-nav ul.main-menu.show {
-    transform: translateX(-20px);
-  }
+}
+.main-nav ul.main-menu-open {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #f2f2f2;
+  width: 50%;
+  height: 100%;
+  border-right: #ccc 1px solid;
+  padding: 30px;
+  transform: translateX(0px);
+  transition: transform 0.5s ease-in-out;
+}
+
+.open {
+  padding: 10px;
+  border-bottom: #ccc solid 1px;
+  margin-bottom: 16px;
+  font-size: 14px;
+}
+
+.open:last-child {
+  border-bottom: 0;
+}
+
+.background-close {
+  display: none;
+}
+
+.background-open {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0.7;
+  background-color: black;
 }
