--- a/src/app/sass/showcase.css
+++ b/src/app/sass/showcase.css
@@ -42,9 +42,14 @@
   margin-left: 10px;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 992px) {
   .home-cards {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (min-width: 992px) {
+  .home-cards div p {
+    height: 90px;
   }
 }
 @media screen and (max-width: 500px) {
