--- a/src/app/sass/showcase.scss
+++ b/src/app/sass/showcase.scss
@@ -49,9 +49,15 @@
   }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 992px) {
   .home-cards {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .home-cards div p {
+    height: 90px;
   }
 }
 
