--- a/src/app/sass/xbox.css
+++ b/src/app/sass/xbox.css
@@ -7,17 +7,27 @@
 .xbox .content {
   width: 40%;
   padding: 50px 0 0 30px;
+  position: relative;
 }
-.xbox p,
-.xbox .carbon p {
+.xbox p {
   margin: 10px 0 20px;
 }
 
 @media screen and (max-width: 700px) {
-  .xbox .content p {
-    display: none;
-  }
   .xbox .content h2 {
     margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 636px) {
+  .xbox .content {
+    width: 60%;
+  }
+  .xbox p {
+    background-color: rgba(255, 255, 255, 0.5);
+  }
+}
+@media screen and (max-width: 432px) {
+  .xbox .content {
+    width: 80%;
   }
 }
