--- a/src/app/sass/navbar.css
+++ b/src/app/sass/navbar.css
@@ -33,6 +33,7 @@
   right: 30px;
   z-index: 2;
   display: none;
+  z-index: 200;
 }
 
 .btn {
@@ -103,6 +104,7 @@
   padding: 30px;
   transform: translateX(0px);
   transition: transform 0.5s ease-in-out;
+  z-index: 100;
 }
 
 .open {
@@ -129,4 +131,5 @@
   bottom: 0;
   opacity: 0.7;
   background-color: black;
+  z-index: 90;
 }
