--- a/src/app/sass/navbar.scss
+++ b/src/app/sass/navbar.scss
@@ -39,6 +39,7 @@
   right: 30px;
   z-index: 2;
   display: none;
+  z-index: 200;
 }
 
 .btn {
@@ -117,6 +118,7 @@
   padding: 30px;
   transform: translateX(0px);
   transition: transform 0.5s ease-in-out;
+  z-index: 100;
 }
 
 .open {
@@ -143,4 +145,5 @@
   bottom: 0;
   opacity: .7;
   background-color: black;
+  z-index: 90;
 }
