--- a/src/app/sass/carbon.css
+++ b/src/app/sass/carbon.css
@@ -12,6 +12,13 @@
 @media screen and (max-width: 700px) {
   .carbon .content {
     width: 80%;
+    padding-top: 70px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .carbon .content {
+    width: 80%;
+    padding-top: 50px;
   }
 }
 .btn-flex {
