--- a/src/app/sass/carbon.scss
+++ b/src/app/sass/carbon.scss
@@ -28,6 +28,14 @@
 @media screen and (max-width: 700px) {
   .carbon .content {
     width: 80%;
+    padding-top: 70px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .carbon .content {
+    width: 80%;
+    padding-top: 50px;
   }
 }
 
