--- a/src/app/sass/carbon.scss
+++ b/src/app/sass/carbon.scss
@@ -25,10 +25,15 @@
   padding: 100px 0 0 30px;
 }
 
+@media screen and (max-width: 755px) {
+  .carbon .content {
+    padding-top: 70px;
+  }
+}
+
 @media screen and (max-width: 700px) {
   .carbon .content {
     width: 80%;
-    padding-top: 70px;
   }
 }
 
